# transformer

./: .gitignore  CHAT_EXPERIMENTS.md  CMakeLists.txt  CMakeLists_p2p.txt  DETERMINISM_NOTES.md  DISTRIBUTED_VISION.md  EXPORT_NOTES.md  Makefile  PERF_NOTES.md  README.md  TODO.md  build_cuda_windows.bat  convert_parquet.py  distributed_training_long_term_plan.md  exp  finn  test_moe_cuda.cpp  transformer_model.cpp
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
build_test/mpi_stub/include/: mpi.h
build_test/nccl_stub/include/: nccl.h
config/: transformer_config.json
config/architectures/: custom_example.json  llama.json  vanilla.json
data/: convert_wiki_json_to_txt.py  training_pairs.txt  validation_pairs.txt
examples/: distributed_training_example.cpp  optimized_training_usage.cpp  p2p_real_world_example.cpp  p2p_training_example.cpp
include/: ab_testing_framework.hpp  adaptive_batch_optimizer.hpp  adaptive_batch_scheduler.hpp  adaptive_compression.hpp  advanced_integrated_platform.hpp  architecture.hpp  async_data_loader.hpp  attention.hpp  base_tokenizer.hpp  beam_search.hpp  byzantine_detection.hpp  cache.hpp  checkpoint_manager.hpp  config.hpp  convergence_quality.hpp  cuda_compat.h  cuda_kernels.hpp  cuda_utils.hpp  data_augmentation.hpp  debug.hpp  debugging_monitoring.hpp  distributed_curation.hpp  distributed_rlhf.hpp  distributed_transformer.hpp  dropout.hpp  dynamic_load_balancer.hpp  embeddings.hpp  evaluation_metrics.hpp  feed_forward.hpp  gguf_export.hpp  gradient_accumulator.hpp  gradient_checkpoint.hpp  gradient_compression.hpp  gradient_diagnostics.hpp  half_precision.hpp  heterogeneous_performance.hpp  hyperparameter_tuner.hpp  incentive_alignment.hpp  integrated_platform.hpp  kademlia_dht.hpp  (+47 more)
include/cuda/: attention_kernels.cuh  attention_ops.cuh  backward_ops.cuh  cuda_init.cuh  cuda_kernels.cuh  cuda_math_fix.hpp  cuda_matrix.hpp  cuda_utils.cuh  feed_forward_kernels.cuh  fused_attention_kernels.cuh  kernel_declarations.cuh  lm_head_kernels.cuh  loss_kernels.cuh  matrix_kernels.cuh  matrix_multiply.cuh  matrix_ops.cuh  memory_manager.cuh  moe_kernel.cuh  parameter_update_kernels.cuh  quantization_kernels.cuh  router_kernel.cuh  swiglu_kernel.cuh  swiglu_kernels.cuh  tensor_kernels.cuh
include/optimizer/: optimizer.hpp  sam.hpp
include/training/: dynamic_loss_scaler.hpp  gradient_manager.hpp  loss_tracker.hpp  loss_visualizer.hpp  training_metrics.hpp  training_monitor.hpp  training_state_manager.hpp
include/utils/: hash_utils.hpp
scripts/: build_distributed.sh  colab_train_tinystories.py  compare_golden_logits.py  eval_tinychat_generalisation.py  extract_gguf_vocab.py  make_colab_src_zip.py  pol_transformer.py  prepare_chat_data.py  prepare_tinystories.py  repair_gguf.py  run_distributed.sh  tcpp2_boot.py  tcpp3_boot.py  tcpp4_boot.py  tcpp5_boot.py  tcpp5d_boot.py  tcpp6_boot.py  tcpp7a_boot.py  tcpp7b_boot.py  tcpp8a_boot.py  tcpp8b_boot.py  tcpp8c_boot.py  tcpp9a_boot.py  tcpp_boot.py  tcppa_boot.py  verify_exports.py  verify_hf_export.py
scripts/scripts/tiktoken_data/: gpt2.vocab.json
scripts/tiktoken_data/: gpt2.merges.json
src/: adaptive_batch_optimizer.cpp  adaptive_batch_scheduler.cpp  adaptive_compression.cpp  advanced_integrated_platform.cpp  architecture.cpp  async_data_loader.cpp  attention.cpp  basic_language_model_head.cpp  beam_search.cpp  build_vocabulary.cpp  byzantine_detection.cpp  cache.cpp  components.cpp  config.cpp  convergence_quality.cpp  count_vocab.cpp  debugging_monitoring.cpp  distributed_curation.cpp  distributed_rlhf.cpp  distributed_transformer.cpp  dynamic_load_balancer.cpp  embeddings.cpp  evaluation_metrics.cpp  feed_forward.cpp  gguf_export.cpp  golden_batch_test.cpp  gqa.cpp  gradient_accumulator.cpp  gradient_checkpoint.cpp  gradient_compression.cpp  half_precision.cpp  heterogeneous_performance.cpp  hyperparameter_tuner.cpp  incentive_alignment.cpp  integrated_platform.cpp  kademlia_dht.cpp  language_model_head.cpp  layer_norm.cpp  lm_head.cpp  logger.cpp  (+46 more)
src/cuda/: attention_cuda.cu  attention_kernels.cu  attention_ops.cu  backward_ops.cu  beam_search_ops.cu  cuda_init.cu  cuda_kernels.cu  cuda_matrix.cu  cuda_utils.cpp  cuda_utils.cu  cuda_utils.cuh  feed_forward_cuda.cu  feed_forward_kernels.cu  feed_forward_kernels.cuh  fused_attention_kernels.cu  kernel_declarations.cuh  layernorm_cuda.cu  layernorm_kernels.cu  lm_head_kernels.cu  loss_kernels.cu  matrix_kernels.cu  matrix_multiply.cu  matrix_ops.cu  memory_manager.cu  moe_kernel.cu  parameter_update_kernels.cu  quantization_kernels.cu  router_kernel.cu  swiglu_kernel.cu  swiglu_kernels.cu  tensor_kernels.cu  token_embedding_cuda.cu
src/optimizer/: sam.cpp
src/training/: gradient_manager.cpp  loss_tracker.cpp  loss_visualizer.cpp  training_monitor.cpp  training_state_manager.cpp
